add -Xmx options

--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -7,7 +7,9 @@ ENV PUBLIC_DIRECTORY=/app/public
 ENV RMI_PORT=1099
 ENV NODE_ADDRESS=rmi://localhost:${RMI_PORT}/node
 ENV KNOWN_NODES=rmi://localhost:${RMI_PORT}/node
+ENV JVM_XMS=""
+ENV JVM_XMX=""
 
-ENTRYPOINT ["java", "-jar", "javamapreduce.jar"]
+ENTRYPOINT ["sh", "-c", "java ${JVM_XMS:+-Xms$JVM_XMS} ${JVM_XMX:+-Xmx$JVM_XMX} -jar javamapreduce.jar"]
 
 COPY target/javamapreduce.jar /app/javamapreduce.jar
