--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -10,6 +10,6 @@ ENV KNOWN_NODES=rmi://localhost:${RMI_PORT}/node
 ENV JVM_XMS=""
 ENV JVM_XMX=""
 
-ENTRYPOINT ["sh", "-c", "java ${JVM_XMS:+-Xms$JVM_XMS} ${JVM_XMX:+-Xmx$JVM_XMX} -jar javamapreduce.jar"]
+ENTRYPOINT ["sh", "-c", "java ${JVM_XMS:+-Xms$JVM_XMS} ${JVM_XMX:+-Xmx$JVM_XMX} -jar javamapreduce.jar 2>&1"]
 
 COPY target/javamapreduce.jar /app/javamapreduce.jar
