--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,3 +4,4 @@ rmi.port=1099
 node.address=rmi://localhost:1099/node
 known.nodes=rmi://localhost:1099/node,rmi://localhost:1100/node,rmi://localhost:1101/node
 processing.power.multiplier=1
+inject.exception=false
