--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -7,6 +7,7 @@ ENV PUBLIC_DIRECTORY=/app/public
 ENV RMI_PORT=1099
 ENV NODE_ADDRESS=rmi://localhost:${RMI_PORT}/node
 ENV KNOWN_NODES=rmi://localhost:${RMI_PORT}/node
+ENV PROCESSING_POWER_MULTIPLIER=1
 ENV JVM_XMS=""
 ENV JVM_XMX=""
 
