--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ public.directory=/home/dawid/Projects/java-mapreduce-wordcount/tmp/java-mapreduc
 rmi.port=1099
 node.address=rmi://localhost:1099/node
 known.nodes=rmi://localhost:1099/node,rmi://localhost:1100/node,rmi://localhost:1101/node
+processing.power.multiplier=1
